<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="@dimen/fragment_padding"
  tools:context=".ui.about.AboutFragment">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:src="@drawable/logo" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="20dp" />

  <TextView
    android:id="@+id/textview_application_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="-" />


  <TextView
    android:id="@+id/textview_version"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Version x.x (xxx)" />

  <TextView
    android:id="@+id/textview_copyright"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_copyright" />

  <TextView
    android:id="@+id/textview_rights"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_rights" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="20dp" />

  <Button
    android:id="@+id/button_terms_and_conditions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_terms_and_conditions_button_text" />

  <Space
    android:layout_width="match_parent"
    android:layout_height="10dp" />


  <Button
    android:id="@+id/button_privacy_policy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_privacy_policy_button_text" />

</LinearLayout>
