<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="viewmodel"
      type="com.remoticom.streetlighting.ui.nodes.settings.NodeSettingsViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.remoticom.streetlighting.ui.nodes.dimplan.settings.NodeDimPlanSettingsFragment"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <TimePicker
      android:id="@+id/node_dim_plan_settings_time_picker"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:timePickerMode="spinner"
      android:layout_gravity="center"
      android:layout_marginVertical="40dp"
      android:hour="@{viewmodel.state.editedNode.dimSteps.get(viewmodel.selectedDimStep).hour}"
      android:minute="@{viewmodel.state.editedNode.dimSteps.get(viewmodel.selectedDimStep).minute}"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/node_dim_plan_settings_light_level_label" />

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/node_dim_plan_settings_textview_level"
        android:text="@{viewmodel.state.editedNode.dimSteps.get(viewmodel.selectedDimStep).level}"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        app:enabledWhenConnected="@{viewmodel.state.connectionStatus}" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content">

      <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/node_dim_plan_settings_light_level_min"
        android:layout_gravity="center_vertical"/>

      <com.google.android.material.slider.Slider
        android:id="@+id/node_dim_plan_settings_slider_light_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:valueFrom="0"
        android:valueTo="100"
        android:value="@={viewmodel.state.editedNode.dimSteps.get(viewmodel.selectedDimStep).level}"
        android:stepSize="5.0"
        app:labelBehavior="gone"
        app:enabledWhenConnected="@{viewmodel.state.connectionStatus}"/>

      <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/node_dim_plan_settings_light_level_max"
        android:layout_gravity="center_vertical|end"
        android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:visibility="gone">

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:text="@string/node_dim_plan_settings_cancel_button_title"/>

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:text="@string/node_dim_plan_settings_save_button_title"/>

    </LinearLayout>
  </LinearLayout>
</layout>
